// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Return JSX for simple string 1`] = `
<p>
  Test

</p>
`;

exports[`Return JSX for simple string 2`] = `
<p>
  cccccccccccccccccccccccccccccccccccccccccccccccccc...
</p>
`;

exports[`Return null for everything expect a string 1`] = `null`;
